--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native": "0.57.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
