--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@shoutem/ui": "^0.23.4",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-navigation": "^2.17.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
