--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@shoutem/ui": "^0.23.4",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-paper": "^2.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
