--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@shoutem/cli": "^0.10.9",
     "@shoutem/ui": "^0.23.4",
+    "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-paper": "^2.0.1",
