--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@shoutem/cli": "^0.10.9",
-    "@shoutem/ui": "^0.23.4",
     "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
@@ -21,7 +19,8 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "teaset": "^0.5.9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.1.0",
