--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-overlayer": "^0.0.2",
     "react-native-paper": "^2.0.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
