--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "native-base": "^2.8.1",
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-overlayer": "^0.0.2",
     "react-native-paper": "^2.0.1",
+    "react-native-root-siblings": "^3.1.4",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
@@ -21,8 +23,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
-    "teaset": "^0.5.9"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.1.0",
