--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.1.0",
