--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
-    "react-native-overlayer": "^0.0.2",
+    "react-native-flash-message": "^0.1.10",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
     "react-native-vector-icons": "^5.0.0",
