--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-flash-message": "^0.1.10",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
+    "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
