--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-fast-image": "^5.0.11",
     "react-native-flash-message": "^0.1.10",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
