--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-native": "0.57.0",
     "react-native-fast-image": "^5.0.11",
     "react-native-flash-message": "^0.1.10",
+    "react-native-image-pan-zoom": "^2.1.11",
+    "react-native-image-zoom-viewer": "^2.2.23",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
     "react-native-tab-view": "^1.2.0",
