--- a/ios/piaopiao/Info.plist
+++ b/ios/piaopiao/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>飘飘需要您允许访问相机权限</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>飘飘需要你允许存储权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>飘飘需要你允许访问相册权限</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>飘飘需要你允许访问麦克风权限</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -25,7 +33,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -43,7 +51,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<false/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
