--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-fast-image": "^5.0.11",
     "react-native-flash-message": "^0.1.10",
     "react-native-image-pan-zoom": "^2.1.11",
@@ -28,6 +29,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.10.13",
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
