--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,10 @@ android {
 }
 
 dependencies {
+    compile project(':rn-fetch-blob')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-fast-image')
+    compile project(':react-native-gesture-handler')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-fast-image')
     implementation project(':react-native-vector-icons')
