--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-fast-image": "^5.0.11",
     "react-native-flash-message": "^0.1.10",
+    "react-native-gesture-handler": "^1.0.12",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-zoom-viewer": "^2.2.23",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
     "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.17.0",
+    "react-navigation": "^3.0.8",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
