--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-image-zoom-viewer": "^2.2.23",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^3.0.8",
