--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^1.0.12",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-zoom-viewer": "^2.2.23",
+    "react-native-motion": "^0.2.0",
     "react-native-paper": "^2.0.1",
     "react-native-root-siblings": "^3.1.4",
     "react-native-splash-screen": "^3.1.1",
