--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-code-push": "^5.5.1",
     "react-native-fast-image": "^5.0.11",
     "react-native-flash-message": "^0.1.10",
     "react-native-gesture-handler": "^1.0.12",
